@@ -1,3 +1,15 @@
+2011-03-05  Andrey Kosyakov  <caseq@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: install onerror handler in inspector tests
+        https://bugs.webkit.org/show_bug.cgi?id=55690
+
+        * http/tests/inspector/inspector-test.js:
+        (initialize_InspectorTest.onError):
+        * http/tests/inspector/resources/extension-main.js:
+        (onError):
+
 2011-03-04  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Yury Semikhatsky.
